Fixed the navbar z-index

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ header {
 
 /* This code is for the styling of the naavigation bar */
 .main-nav {
+  z-index: 1;
   margin: 0;
   padding: 0;
   display: flex;
@@ -121,7 +122,7 @@ ul,
   padding: 1rem;
   color: white;
   margin: 1rem 0 1rem 0;
-  transition: top ease 2s;
+  transition: top 2s;
 }
 
 .what-we-offer-p:hover {
